--- a/template/sts_template.yml
+++ b/template/sts_template.yml
@@ -38,4 +38,4 @@ spec:
           - containerPort: 6379
         volumeMounts:
         - name: module-name-XXX-pvc
-          mountPath: /dataset
+          mountPath: XXX
